# nested-rl-envs

./: .gitignore  Dockerfile  README.md  app.py  config.yaml  config_loader.py  pyproject.toml  train.sh
assets/: README.md
layer0/: __init__.py  reward.py
layer1/: __init__.py  grpo_trainer.py  train.py  training_logger.py  upload.py
layer2/: __init__.py  customer_sim.py  environment.py  hf_agent.py  local_model.py  openenv_wrapper.py
notebooks/: minimum_training_script.ipynb  train_colab.ipynb
personas/: banking_personas.json  generate_personas.py
scripts/: ab_test.py  supabase_setup.sql
tests/: test_environment.py  test_openenv.py  test_reward.py
