[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["layer0*", "layer1*", "layer2*", "personas*"]

[project]
name = "nested-rl-envs"
version = "0.1.0"
description = "Self-Improving Oversight for AI Customer Support — nested RL environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.20.0",
    "requests>=2.31.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "gradio>=4.0.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.1.0",
    "transformers>=4.38.0",
    "trl>=0.8.0",
    "unsloth",
    "peft>=0.9.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.27.0",
    "datasets>=2.18.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
